hphp/test/zend/bad/Zend/tests/indirect_reference_this.php
<?php
class X {
  function f($x){var_dump($$x);}
}
$x = new X;
$x->f("this");
?>